<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
	<LinearLayout 
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		>
		<TextView
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:text="@string/category_name_label" />
		<EditText 
			android:id="@+id/category_name" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:layout_weight="1" 
			android:gravity="right|center_vertical" 
			android:hint="@string/category_name_hint"
			android:imeOptions="actionNext"
			android:singleLine="true" />
	</LinearLayout>
	<Button 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		android:text="@string/add_category_button_text" 
		android:onClick="addCategory" />
		
</LinearLayout>