<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
	<LinearLayout 
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		>
		<TextView
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:text="@string/expense_cat_label" />
		<Spinner 
			android:id="@+id/expense_tracker_cat" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:layout_weight="1" 
			android:gravity="right|center_vertical" 
			android:background="@android:drawable/btn_dropdown" />
			
		<TextView
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:text="@string/expense_cost_label" />
		<EditText
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:text="@string/expense_cost_label" />
		
	</LinearLayout>
	<Button 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		android:text="@string/add_category_button_text" 
		android:onClick="addCategory" />
		
</LinearLayout>